<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!-- EditText for getttaskEntrytask description input -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_no_fill"
        android:padding="10dp"
        android:background="@drawable/circle_border"
        android:layout_marginTop="10dp"/>



    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:maxLength="50"
        android:layout_marginTop="30dp"
        android:textColorHint="#858383"
        android:hint="@string/edit_task_description"
        android:padding="5dp"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/priority_string"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <!-- RadioGroup for visible selection of a priority -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialRed"
            android:checked="true"
            android:text="@string/high_priority"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialOrange"
            android:text="@string/med_priority"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialYellow"
            android:text="@string/low_priority"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark"
        android:textStyle="bold" />

</LinearLayout>